p2/confs/app1.yaml
kind: Service
apiVersion: v1
metadata:
  name: app-one-service
  labels:
    p2: app1
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8888
  selector:
    p2: app1
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app-one-deployment
  annotations:
    IOT/owner: "m&m's"
  labels:
    p2: app1
spec:
  selector:
    matchLabels:
      p2: app1
  template:
    metadata:
      labels:
        p2: app1
    spec:
      containers:
      - name: app-one-container
        image: cloudnatived/demo:hello
        ports:
        - containerPort: 8888
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 8888
          initialDelaySeconds: 2
          periodSeconds: 3
        livenessProbe:
          httpGet:
            path: /
            port: 8888
          initialDelaySeconds: 4
          periodSeconds: 30
        securityContext:
          readOnlyRootFilesystem: true
