p2/confs/app2.yaml
kind: Service
apiVersion: v1
metadata:
  name: app-two-service
  labels:
    p2: app2
spec:
  ports:
    - port: 80
      protocol: TCP
      # targetPort: 8888
      targetPort: 8080
  selector:
    p2: app2
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app-two-deployment
  annotations:
    IOT/owner: "m&m's"
  labels:
    p2: app2
spec:
  selector:
    matchLabels:
      p2: app2
  template:
    metadata:
      labels:
        p2: app2
    spec:
      replicas: 3
      containers:
      - name: app-two-container
        # image: cloudnatived/demo:hello
        image: devenv571/sudoku-app
        ports:
        # - containerPort: 8888
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            # port: 8888
            port: 8080
          initialDelaySeconds: 2
          periodSeconds: 3
        livenessProbe:
          httpGet:
            path: /
            # port: 8888
            port: 8080
          initialDelaySeconds: 4
          periodSeconds: 30
        securityContext:
          readOnlyRootFilesystem: true
