p2/confs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app2-ingress
  labels:
    p2: app1
    p2: app2
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-one-service
            port:
              number: 80
  - host: app2.com
    http:
      paths:
      - path: /
      # - path: /sudoku
        pathType: Prefix
        backend:
          service:
            name: app-two-service
            port:
              number: 80
  - host: app3.com
    http:
      paths:
      # - path: /
      - path: /sudoku
        pathType: Prefix
        backend:
          service:
            name: app-two-service
            port:
              number: 80
